# consiglio

./: README.md  actors.example.yaml  actors.global_event.yaml  pyproject.toml
consiglio/: cli.py  io.py  model.py  types.py
consiglio.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
projects/brexit-referendum/: actors.yaml
projects/global-trade-war/: actors.yaml
projects/iran-power-transition-2026/: actors.yaml  notes.md
projects/us-ai-chip-export-controls/: actors.yaml
projects/us-debt-ceiling-2023/: actors.yaml  notes.md
projects/us-greenland/: actors.yaml
